objects/LAT_AccountInAction__c.object
<CustomObject>
    <fields>
        <fullName>ClientNotAdhering__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cliente não aderente a Ação</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LAT_Account__c</fullName>
        <label>Cliente</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>LAT_AccountInAction</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>LAT_ApprovedByClient__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Aprovado pelo Cliente</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LAT_ClientAccepted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cliente aceito</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LAT_ClientByRegion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Id Cliente por Regional</label>
        <referenceTo>LAT_ClientByRegion__c</referenceTo>
        <relationshipLabel>Clientes Ação Promocional</relationshipLabel>
        <relationshipName>Clientes_Foco</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAT_ClientName__c</fullName>
        <formula>HYPERLINK(&apos;/&apos; +  Id ,  LAT_Account__r.Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cliente</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_CollectData__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Coletar Dados</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LAT_DataCollected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dados Coletados?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LAT_Description__c</fullName>
        <label>Comentários</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LAT_Execute__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cliente Foco</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LAT_ImplementedAction__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ação Implementada?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LAT_NoValidationReason__c</fullName>
        <label>Motivo não validação (Planejamento)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Contrato Concorrência</fullName>
                </value>
                <value>
                    <fullName>Problemas de Relacionamento</fullName>
                </value>
                <value>
                    <fullName>Casa não comporta a ação (espaço físico)</fullName>
                </value>
                <value>
                    <fullName>Cliente fechou (cadastro desatualizado)</fullName>
                </value>
                <value>
                    <fullName>Casa não trabalha com o produto</fullName>
                </value>
                <value>
                    <fullName>Outros</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LAT_PaymentNumber__c</fullName>
        <label>Número do Pagamento</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_PromotionalAction__c</fullName>
        <label>Ação promocional</label>
        <referenceTo>LAT_PromotionalAction__c</referenceTo>
        <relationshipName>LAT_AccountInAction</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>LAT_RejectionReason__c</fullName>
        <label>Motivo Rejeição (Cliente)</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LAT_Status__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Cliente com contrato de exclusividade com a concorrência</fullName>
                </value>
                <value>
                    <fullName>Cliente já tem ação da concorrência em desenvolvimento</fullName>
                </value>
                <value>
                    <fullName>Casa não aceita ações promocionais</fullName>
                </value>
                <value>
                    <fullName>Outros (registro de observações será obrigatório)</fullName>
                </value>
                <value>
                    <fullName>Pedências de pagamento de ações promocionais anteriores</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LAT_RemovedMaterials__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Materiais Retirados?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LAT_RetireMaterials__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Retirar Materiais</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LAT_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ação Finalizada</fullName>
                </value>
                <value>
                    <fullName>Ação cancelada pela PRB</fullName>
                </value>
                <value>
                    <fullName>Cliente Selecionado</fullName>
                    <default>true</default>
                    <label>Cliente Selecionado</label>
                </value>
                <value>
                    <fullName>Cliente Validado</fullName>
                </value>
                <value>
                    <fullName>Cliente Substituto</fullName>
                </value>
                <value>
                    <fullName>Cliente não aprovado</fullName>
                </value>
                <value>
                    <fullName>Pagamentos Autorizados</fullName>
                </value>
                <value>
                    <fullName>Cliente não previsto</fullName>
                </value>
                <value>
                    <fullName>Ação não aprovada pelo cliente</fullName>
                </value>
                <value>
                    <fullName>Ação aprovada pelo cliente</fullName>
                </value>
                <value>
                    <fullName>Pagamento Realizado</fullName>
                </value>
                <value>
                    <fullName>Cliente Em aprovação</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LAT_ValidatedClient__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Validado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mechanic__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Se a Mecânica for padrão, não informar nada neste campo.</inlineHelpText>
        <label>Mecânica</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>LAT_Mecanica__c.LAT_PromotionalAction__c</field>
                <operation>equals</operation>
                <valueField>$Source.LAT_PromotionalAction__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>LAT_Mecanica__c</referenceTo>
        <relationshipLabel>Clientes Ações Promocionales</relationshipLabel>
        <relationshipName>Clientes_A_es_Promocionales</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Clientes Ação Promocional</label>
    <listViews>
        <fullName>All</fullName>
        <columns>LAT_Account__c</columns>
        <columns>LAT_PromotionalAction__c</columns>
        <columns>LAT_Status__c</columns>
        <columns>LAT_ClientName__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>AIA-{0000}</displayFormat>
        <label>Cliente Foco</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Clientes Ação Promocional</pluralLabel>
    <recordTypes>
        <fullName>LAT_Finalizada</fullName>
        <active>false</active>
        <label>Finalizada</label>
    </recordTypes>
    <recordTypes>
        <fullName>LAT_Iniciada</fullName>
        <active>true</active>
        <label>Iniciada</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>